--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="container">his</div>
+    <div class="container">
+      <div class="sidebar">
+        <div class="logo">Dashboard</div>
+        <div class="links">
+          <ul>
+            <li>Home</li>
+            <li>Profile</li>
+            <li>Messages</li>
+            <li>History</li>
+            <li>Tasks</li>
+            <li>Communities</li>
+          </ul>
+        </div>
+        <div class="settings"></div>
+      </div>
+      <div class="header"></div>
+      <div class="content"></div>
+    </div>
   </body>
 </html>
