beshe zabravil da seifnesh

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
@@ -20,10 +21,27 @@
             <li>Communities</li>
           </ul>
         </div>
-        <div class="settings"></div>
+        <div class="settings">
+          <ul>
+            <li>Settings</li>
+            <li>Support</li>
+            <li>Privacy</li>
+          </ul>
+        </div>
       </div>
-      <div class="header"></div>
-      <div class="content"></div>
+      <div class="header">
+        <div class="header-info">
+          <form action="#" method="post">
+            <button type="submit">icon here</button>
+            <input type="text" />
+          </form>
+          <h1>Notifications</h1>
+          <h2>profile pic</h2>
+          <h3>mr name</h3>
+        </div>
+        <div class="header-action">hi there blah blah</div>
+      </div>
+      <div class="content">idk</div>
     </div>
   </body>
 </html>
