--- a/index.html
+++ b/index.html
@@ -43,7 +43,36 @@
         </div>
         <div class="header-action">hi there blah blah</div>
       </div>
-      <div class="content">idk</div>
+      <div class="content">
+        <div class="projects">
+          <div class="card">
+            <h1>Super Cool Project</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
+          </div>
+          <div class="card">
+            <h1>Super Cool Project</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
+          </div>
+          <div class="card">
+            <h1>Super Cool Project</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
+          </div>
+          <div class="card">
+            <h1>Super Cool Project</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
+          </div>
+          <div class="card">
+            <h1>Super Cool Project</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
+          </div>
+          <div class="card">
+            <h1>Super Cool Project</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
+          </div>
+        </div>
+        <div class="announcements">s</div>
+        <div class="trending">s</div>
+      </div>
     </div>
   </body>
 </html>
